--- a/Rongiajad/app/src/main/AndroidManifest.xml
+++ b/Rongiajad/app/src/main/AndroidManifest.xml
@@ -9,13 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Rongiajad">
-        <activity android:name=".MainActivity">
+        <activity android:name=".RippmenuActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+<!--        <activity android:name=".RippmenuActivity"/>-->
+        <activity android:name=".SettingsActivity"/>
+        <activity android:name=".YldinfoActivity"/>
+<!--        <activity android:name=".DarkmodeLayout"/>-->
     </application>
+
 
 </manifest>
