--- a/Elron/app/src/main/AndroidManifest.xml
+++ b/Elron/app/src/main/AndroidManifest.xml
@@ -9,8 +9,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Elron">
-        <activity android:name=".InfoActivity"></activity>
-        <activity android:name=".SettingsActivity" />
+        <activity
+            android:name=".InfoActivity"
+            android:label="@string/activity_info_name"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.psennoi.elron.MainActivity" />
+        </activity>
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/activity_settings_name"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.psennoi.elron.MainActivity" />
+        </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
